# reasoner_docker_pipeline

./: .gitmodules  README.md  docker-compose.yml
noetic_ws/microphone_analyzer/: CMakeLists.txt  package.xml
noetic_ws/microphone_analyzer/config/: noise_profile.npy  params.yaml
noetic_ws/microphone_analyzer/launch/: analyzer.launch
noetic_ws/microphone_analyzer/src/: analyzer.py  generate_noise_profile.py  vad_node.py  vad_stt.py
noetic_ws/noetic_to_melodic/: CMakeLists.txt  dummy_noetic.py  motion_execution.py  package.xml
noetic_ws/noetic_to_melodic/src/: dummy_noetic.py  motion_execution.py
noetic_ws/noetic_to_melodic/src/annotations_tiago/: obj_000001.npy  obj_000002.npy  obj_000003.npy  obj_000004.npy  obj_000005.npy  obj_000006.npy  obj_000007.npy  obj_000008.npy  obj_000009.npy  obj_000010.npy  obj_000011.npy  obj_000012.npy  obj_000013.npy  obj_000014.npy  obj_000015.npy  obj_000016.npy  obj_000017.npy  obj_000018.npy  obj_000019.npy  obj_000020.npy
noetic_ws/noetic_to_ros2/: CMakeLists.txt  README.md  package.xml  setup.py
noetic_ws/noetic_to_ros2/launch/: bridge.launch
noetic_ws/noetic_to_ros2/src/noetic_to_ros2/: zmq_hri_subscriber.py  zmq_rs_publisher.py  zmq_tf_publisher.py
ros2_ws/gesture_language_fusion/: package.xml  setup.cfg  setup.py
ros2_ws/gesture_language_fusion/gesture_language_fusion/: fusion_node.py
ros2_ws/gesture_language_fusion/launch/: fusion_node_launch.py
ros2_ws/gesture_sentence_detector/: package.xml  setup.cfg  setup.py
ros2_ws/gesture_sentence_detector/gesture_sentence_detector/: gesture_sentence_detector.py
ros2_ws/natural_language_processing/: README.md  package.xml
ros2_ws/natural_language_processing/natural_language_processing/: scene_reader.py
ros2_ws/natural_language_processing/natural_language_processing/sentence_instruct_transformer/: README.md  sentence_processor.py  test_nlp.py
ros2_ws/reasoner/: package.xml
ros2_ws/reasoner/reasoner/: classes.py  prob_demo.py  reasoner_node.py
ros2_ws/teleop_gesture_toolbox/gesture_sentence_maker/gesture_sentence_maker/: gesture_deictic_processor_standalone.py
ros2_ws/teleop_gesture_toolbox/natural_language_processing/: setup.cfg  setup.py
ros2_ws/teleop_gesture_toolbox/natural_language_processing/natural_language_processing/: nl_node.py
ros2_ws/teleop_gesture_toolbox/natural_language_processing/natural_language_processing/speech_to_text/: audio_recorder.py  whisper_model.py
src/melodic/: Dockerfile  entrypoint.sh
src/noetic/: Dockerfile  entrypoint.sh
src/ros2/: Dockerfile  entrypoint.sh
tiago_sim/: Dockerfile  docker-compose.yml  entrypoint.sh
