<package format="2">
  <name>microphone_analyzer</name>
  <version>0.1.0</version>
  <description>Microphone noise filtering and voice detection</description>

  <maintainer email="you@example.com"> </maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>

  <export></export>
</package>
