<?xml version="1.0"?>
<package format="2">
  <name>noetic_to_melodic</name>
  <version>0.0.0</version>
  <description>Noetic side of bridge between noetic and melodic</description>

  <maintainer email="dratvsim@fel.cvut.cz">Simon Dratva</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export></export>
</package>
