<?xml version="1.0"?>
<package format="2">
  <name>noetic_to_ros2</name>
  <version>0.0.1</version>
  <description>A bridge between iChores ROS1 workspace and ROS2 workspace</description>

  <author email="petr.vanc@cvut.cz">Petr Vanc</author>
  <maintainer email="dratvsim@fel.cvut.cz">Simon Dratva</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

