<?xml version="1.0"?>
<package format="3">
  <name>natural_language_processing</name>
  <version>0.1.0</version>
  <description>natural_language_processing</description>
  <maintainer email="petr.vanc@cvut.com">Petr Vanc</maintainer>
  <author></author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
